# sensenova-u1-lora-trainer

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.sh  train.sh
configs/: default.yaml  official_alignment.yaml  stack_8step.yaml  v16c.yaml  v18.yaml
docs/: SETUP.md  small_data_style_ablation.html
train_u1/: README.md  __init__.py  config.py  constants.py  requirements.txt  upstream_pinned_sha256.json
train_u1/data/: cache_io.py  cache_schema_example.yaml  collators.py  datasets.py  u1_preprocess.py
train_u1/model/: loader.py  lora.py  lora_io.py  losses.py  masking.py  params.py  patching.py  wrapper.py
train_u1/scripts/: activate_env.sh  cache_equiv_smoke.py  dataset_tools.py  download_model.py  eval_one_step.py  forward_smoke.py  inspect_lora_targets.py  install_modeling_into_snapshot.py  param_breakdown.py  reconcile.py  regression_suite.py  sample_checkpoints.sh  sample_t2i.py  sample_t2i_offload.py  sample_t2i_offload_batch.py  sft_final_diff.py  train_bf16_offload.py  train_fm_mvp.py  verify_freeze_regex_against_index.py
train_u1/tests/: test_cache_io.py  test_collator.py  test_constants.py  test_dataset_format.py  test_grad_flow.py  test_lora_spec.py  test_mask.py  test_official_consistency.py  test_overfit_smoke.py  test_params.py  test_patchify.py  test_repro_seed.py  test_train_bf16_offload_helpers.py  test_u1_preprocess.py
